# game_engine_mathematics_code

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: Conan.cmake
src/: CMakeLists.txt  Utils.h
src/Line/: Line.cpp  Line.h
src/Matrix/: Matrix.h
src/Plane/: Plane.cpp  Plane.h
src/Quaternion/: Quaternion.h
src/Transforms/: Transforms.h
src/Utility/: FloatingPointEquals.h  Utility.h
src/Vector/: Vector.h
src/intersection/: intersection.cpp  intersection.h
test/: CMakeLists.txt  rc_custom_generators.h  test_line.cpp  tests.cpp  tests_matrix.cpp  tests_vector.cpp
